--- a/index.html
+++ b/index.html
@@ -6,29 +6,35 @@
     <title>About Cat0Boy</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
+            background-color: #f0f0f0;
+            background-image: url('https://i.imgur.com/JYFEMDG.jpg');
+            background-size: cover;
+            background-position: center;
         }
         .container {
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.8);
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         }
         h1 {
             text-align: center;
             color: #333;
+            font-size: 36px;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         }
         p {
             line-height: 1.6;
-            color: #555;
+            color: #333;
+            margin-bottom: 10px;
         }
         .about-me {
-            margin-top: 30px;
             text-align: center;
         }
         .about-me img {
@@ -36,6 +42,7 @@
             margin: 0 auto;
             width: 200px;
             border-radius: 50%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
         .social-links {
             margin-top: 20px;
@@ -46,6 +53,10 @@
             margin: 0 10px;
             color: #333;
             text-decoration: none;
+            transition: transform 0.3s ease;
+        }
+        .social-links a:hover {
+            transform: scale(1.2);
         }
     </style>
 </head>
@@ -55,14 +66,11 @@
         <div class="about-me">
             <img src="https://images-ext-1.discordapp.net/external/mvAtcknblXGRdq6Fvd06LSD1Rdj1in8KQRWzxzR9ZFE/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/1236286999766503480/9ea9c8c8271ac6186232f46d48841b6e.png?format=webp&quality=lossless&width=416&height=416" alt="Cat0Boy's Profile Picture">
             <p>Hello! I'm Cat0Boy, a passionate coder learning Python. Welcome to my GitHub Pages website.</p>
-            <p>I run a Discord server called <a href="https://discord.gg/fq4hYM98R3">Flame Host</a> where we discuss coding, technology, and more!</p>
-            <p>You can also find me on YouTube at my channel <a href="https://www.youtube.com/channel/UCkE04Q6RTloJaUDW24SV4lg">Cat Boy</a>, where I share tutorials and coding-related content.</p>
+            <p>I run a VPS selling service. Feel free to check it out <a href="https://discord.gg/fq4hYM98R3">here</a>.</p>
             <p>Feel free to connect with me on GitHub and explore my projects!</p>
         </div>
         <div class="social-links">
             <a href="https://github.com/Cat0Boy">GitHub</a>
-            <a href="https://www.youtube.com/channel/UCkE04Q6RTloJaUDW24SV4lg">YouTube</a>
-            <a href="https://discord.gg/fq4hYM98R3">Discord Server</a>
         </div>
     </div>
 </body>
