--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
-            background-image: url('https://i.imgur.com/JYFEMDG.jpg');
+            background-image: url('https://t4.ftcdn.net/jpg/06/60/84/59/360_F_660845913_mqCzord69qkBY63nTVrW8fZW5YLVrjxS.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -19,8 +19,8 @@
             margin: 50px auto;
             padding: 20px;
             background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 8px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
         }
         h1 {
             text-align: center;
@@ -66,7 +66,9 @@
         <div class="about-me">
             <img src="https://images-ext-1.discordapp.net/external/mvAtcknblXGRdq6Fvd06LSD1Rdj1in8KQRWzxzR9ZFE/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/1236286999766503480/9ea9c8c8271ac6186232f46d48841b6e.png?format=webp&quality=lossless&width=416&height=416" alt="Cat0Boy's Profile Picture">
             <p>Hello! I'm Cat0Boy, a passionate coder learning Python. Welcome to my GitHub Pages website.</p>
-            <p>I run a VPS selling service. Feel free to check it out <a href="https://discord.gg/fq4hYM98R3">here</a>.</p>
+            <p>I run a VPS selling service called <a href="https://discord.gg/fq4hYM98R3">Flame Host</a>. Feel free to check it out!</p>
+            <p>You can also find me on YouTube at my channel <a href="https://www.youtube.com/channel/UCkE04Q6RTloJaUDW24SV4lg">Cat Boy</a>, where I share coding tutorials and more.</p>
+            <p>Additionally, join my Discord server <a href="https://discord.gg/yqXVPuHAyv">here</a> to chat and discuss.</p>
             <p>Feel free to connect with me on GitHub and explore my projects!</p>
         </div>
         <div class="social-links">
