--- a/index.html
+++ b/index.html
@@ -18,62 +18,11 @@
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: #3498db;
             border-radius: 20px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            color: #fff;
         }
         h1 {
             text-align: center;
-            color: #333;
-            font-size: 36px;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-        }
-        p {
-            line-height: 1.6;
-            color: #333;
-            margin-bottom: 10px;
-        }
-        .about-me {
-            text-align: center;
-        }
-        .about-me img {
-            display: block;
-            margin: 0 auto;
-            width: 200px;
-            border-radius: 50%;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-        .social-links {
-            margin-top: 20px;
-            text-align: center;
-        }
-        .social-links a {
-            display: inline-block;
-            margin: 0 10px;
-            color: #333;
-            text-decoration: none;
-            transition: transform 0.3s ease;
-        }
-        .social-links a:hover {
-            transform: scale(1.2);
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>About Cat0Boy</h1>
-        <div class="about-me">
-            <img src="https://images-ext-1.discordapp.net/external/mvAtcknblXGRdq6Fvd06LSD1Rdj1in8KQRWzxzR9ZFE/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/1236286999766503480/9ea9c8c8271ac6186232f46d48841b6e.png?format=webp&quality=lossless&width=416&height=416" alt="Cat0Boy's Profile Picture">
-            <p>Hello! I'm Cat0Boy, a passionate coder learning Python. Welcome to my GitHub Pages website.</p>
-            <p>I run a VPS selling service called <a href="https://discord.gg/fq4hYM98R3">Flame Host</a>. Feel free to check it out!</p>
-            <p>You can also find me on YouTube at my channel <a href="https://www.youtube.com/channel/UCkE04Q6RTloJaUDW24SV4lg">Cat Boy</a>, where I share coding tutorials and more.</p>
-            <p>Additionally, join my Discord server <a href="https://discord.gg/yqXVPuHAyv">here</a> to chat and discuss.</p>
-            <p>Feel free to connect with me on GitHub and explore my projects!</p>
-        </div>
-        <div class="social-links">
-            <a href="https://github.com/Cat0Boy">GitHub</a>
-        </div>
-    </div>
-</body>
-</html>
+            font-size: 36px
