--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
             margin: 0;
             padding: 0;
             background-color: #f0f0f0;
-            background-image: url('https://t4.ftcdn.net/jpg/06/60/84/59/360_F_660845913_mqCzord69qkBY63nTVrW8fZW5YLVrjxS.jpg');
+            background-image: url('https://i.imgur.com/8XxRIit.jpg');
             background-size: cover;
             background-position: center;
+            filter: blur(8px); /* Add blur effect to the background */
         }
         .container {
             max-width: 800px;
             margin: 50px auto;
             padding: 20px;
-            background-color: #3498db;
+            background-color: rgba(52, 152, 219, 0.8);
             border-radius: 20px;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
             color: #fff;
+            backdrop-filter: blur(10px); /* Add blur effect to the container */
         }
         h1 {
             text-align: center;
